<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_name">My Nanodegree Apps!</string>
    <string name="spotify_app_name">Spotify Streamer</string>
    <string name="scores_app_name">Scores App</string>
    <string name="library_app_name">Library App</string>
    <string name="build_bigger_app_name">BUILD IT BIGGER</string>
    <string name="xyz_app_name">XYZ Reader</string>
    <string name="capstone_app_name">CAPSTONE: MY OWN APP</string>
</resources>
